tests/positive/rule2_binary_search_function.safe
-- Test: rule2_binary_search_function
-- Description: Binary search as a record-returning function with early returns.
--   The midpoint is computed from valid bounds and used for in-range
--   indexing, while the function returns from multiple control-flow exits.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.1.p126:812b54a8
-- Expected: ACCEPT

package binary_Search_Function

   type index is range 1 to 64;
   type element is range 0 to 10_000;
   type sorted_Array is array (index) of element;
   type search_Result is record
      found    : boolean;
      found_At : index;


   function search (arr : sorted_Array;
                    key : element) returns search_Result
      lo  : index = index.first;
      hi  : index = index.last;
      mid : index;

      while lo <= hi
         mid = lo + (hi - lo) / 2;
         if arr (mid) == key
            return ((found = True, found_At = mid) as search_Result);
         else if arr (mid) < key
            if mid == index.last
               return ((found = False, found_At = index.first) as search_Result);

            lo = mid + 1;
         else
            if mid == index.first
               return ((found = False, found_At = index.first) as search_Result);

            hi = mid - 1;


      return ((found = False, found_At = index.first) as search_Result);



