tests/negative/neg_rule2_negative.safe
-- Test: neg_rule2_negative
-- Description: Negative index used on a naturally-indexed array.
--   The array is indexed from 0, but the computed index can be negative.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: REJECT index_out_of_bounds

package negative_Index_Test

   type nat_Index is range 0 to 15;
   type buffer is array (nat_Index) of integer;

   --  Access_Offset: accesses Arr(Base - Offset).
   --  If Base = 0 and Offset = 1, then Base - Offset = -1, which
   --  is below the array's lower bound of 0.
   function access_Offset (arr : buffer;
                           base : nat_Index;
                           offset : natural) returns integer

      return arr (nat_Index (integer (base) - offset));  -- ERROR: may be negative



